--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta property="og:image" content="/android-chrome-512x512.png"/>
     <link rel="stylesheet" href="main.css">
 </head>
+    <script>console.log("THANK YOU FOR PLAYING - 46.53724 6.58818")</script>
 <body>
     <header onselectstart='return false'>
         <div class="name-container">
